# cxx-spec

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yaml
cmake/: FindDeps.cmake
examples/: CMakeLists.txt  fail_exn.cpp  fail_noteq.cpp  pass.cpp
examples/containers/: CMakeLists.txt  unordered_map.cpp  vector.cpp
include/: cxx-spec.h
